set(COLMAP_LIBRARIES
    mvs
    sfm
    controllers
    base
    feature
    ui
    util
    controllers
    mvs
    sfm
    estimators
    base
    feature
    ui
    util
    estimators
    optim
    retrieval
    estimators
    base
    util
    flann
    graclus
    lsd
    pba
    poisson_recon
    sqlite3
    sift_gpu
    vlfeat
    ${CMAKE_DL_LIBS}
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_PROGRAM_OPTIONS_LIBRARY}
    ${Boost_REGEX_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
    ${GLOG_LIBRARIES}
    ${FREEIMAGE_LIBRARIES}
    ${CERES_LIBRARIES}
    ${OPENGL_gl_LIBRARY}
    ${OPENGL_glu_LIBRARY})

if(CUDA_ENABLED)
    set(COLMAP_LIBRARIES
        mvs
        mvs_cuda
        util_cuda
        ${COLMAP_LIBRARIES}
        mvs
        mvs_cuda
        mvs
        util_cuda)
endif()

if(UNIX)
    set(COLMAP_LIBRARIES ${COLMAP_LIBRARIES} pthread)
endif()

add_subdirectory(base)
add_subdirectory(controllers)
add_subdirectory(estimators)
add_subdirectory(exe)
add_subdirectory(feature)
add_subdirectory(mvs)
add_subdirectory(optim)
add_subdirectory(retrieval)
add_subdirectory(sfm)
add_subdirectory(tools)
add_subdirectory(ui)
add_subdirectory(util)
