find_package(benchmark REQUIRED)

add_executable(benchmark_cost_functions cost_functions.cc)
target_link_libraries(benchmark_cost_functions PRIVATE colmap_estimators benchmark::benchmark)

add_executable(benchmark_bundle_adjustment bundle_adjustment.cc)
target_link_libraries(benchmark_bundle_adjustment PRIVATE colmap_estimators colmap_scene benchmark::benchmark)

add_executable(benchmark_global_positioning global_positioning.cc)
target_link_libraries(benchmark_global_positioning PRIVATE colmap_estimators colmap_scene benchmark::benchmark)
